tricky hover added

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title></title>
@@ -259,12 +259,24 @@
           <div class="hero-cards-container">
             <div class="hero-card">
               <img src="static/hero-card1.png" alt="Plato de comida 1" />
+              <div>
+                <h5>Food 1</h5>
+                <button type="button">Order Now</button>
+              </div>
             </div>
             <div class="hero-card">
               <img src="static/hero-card1.png" alt="Plato de comida 2" />
+              <div>
+                <h5>Food 2</h5>
+                <button type="button">Order Now</button>
+              </div>
             </div>
             <div class="hero-card">
               <img src="static/hero-card3.png" alt="Plato de comida 3" />
+              <div>
+                <h5>Food 3</h5>
+                <button type="button">Order Now</button>
+              </div>
             </div>
           </div>
         </div>
@@ -295,15 +307,67 @@
         <section class="dishes-cards-container">
           <div class="dishes-card">
             <img src="static/special-dish1.png" alt="Special Dish 1" />
+            <div>
+              <div>estrellitas</div>
+              <div>
+                <h7>Italian Cheese</h7>
+                <span>$150</span>
+              </div>
+              <div>
+                <button>Order Now</button>
+                <button>l</button>
+                <button>c</button>
+                <button>a</button>
+              </div>
+            </div>
           </div>
           <div class="dishes-card">
             <img src="static/special-dish3.png" alt="Special Dish 2" />
+            <div>
+              <div>estrellitas</div>
+              <div>
+                <h7>Italian Cheese</h7>
+                <span>$150</span>
+              </div>
+              <div>
+                <button>Order Now</button>
+                <button>l</button>
+                <button>c</button>
+                <button>a</button>
+              </div>
+            </div>
           </div>
           <div class="dishes-card">
             <img src="static/special-dish3.png" alt="Special Dish 3" />
+            <div>
+              <div>estrellitas</div>
+              <div>
+                <h7>Italian Cheese</h7>
+                <span>$150</span>
+              </div>
+              <div>
+                <button>Order Now</button>
+                <button>l</button>
+                <button>c</button>
+                <button>a</button>
+              </div>
+            </div>
           </div>
           <div class="dishes-card">
             <img src="static/special-dish4.png" alt="Special Dish 4" />
+            <div>
+              <div>estrellitas</div>
+              <div>
+                <h7>Italian Cheese</h7>
+                <span>$150</span>
+              </div>
+              <div>
+                <button>Order Now</button>
+                <button>l</button>
+                <button>c</button>
+                <button>a</button>
+              </div>
+            </div>
           </div>
         </section>
       </section>
@@ -689,41 +753,119 @@
         </section>
       </section>
       <section class="reviews">
-        <svg
-          fill="#000000"
-          height="64px"
-          width="64px"
-          version="1.1"
-          id="Icons"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          viewBox="0 0 32 32"
-          xml:space="preserve"
-        >
-          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-          <g
-            id="SVGRepo_tracerCarrier"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          ></g>
-          <g id="SVGRepo_iconCarrier">
-            <g>
-              <path
-                d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
-              ></path>
-              <path
-                d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
-              ></path>
+        <div>
+          <svg
+            fill="#000000"
+            height="64px"
+            width="64px"
+            version="1.1"
+            id="Icons"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 0 32 32"
+            xml:space="preserve"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <g>
+                <path
+                  d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
+                ></path>
+                <path
+                  d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
+                ></path>
+              </g>
             </g>
-          </g>
-        </svg>
-        <p>Delicious food, great service, highly recommend</p>
-        <p>Good Food Restaurant!</p>
-        <hr />
-        <div class="reviewer-profile">
-          <img src="static/review-profile.png" alt="reviewer profile" />
-          <h6>Esther Howard</h6>
-          <p>Manager ABC Group</p>
+          </svg>
+          <p>Delicious food, great service, highly recommend</p>
+          <p>Good Food Restaurant!</p>
+          <hr />
+          <div class="reviewer-profile">
+            <img src="static/review-profile.png" alt="reviewer profile" />
+            <h6>Esther Howard</h6>
+            <p>Manager ABC Group</p>
+          </div>
+        </div>
+        <div>
+          <svg
+            fill="#000000"
+            height="64px"
+            width="64px"
+            version="1.1"
+            id="Icons"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 0 32 32"
+            xml:space="preserve"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <g>
+                <path
+                  d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
+                ></path>
+                <path
+                  d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
+                ></path>
+              </g>
+            </g>
+          </svg>
+          <p>Delicious food, great service, highly recommend</p>
+          <p>Good Food Restaurant!</p>
+          <hr />
+          <div class="reviewer-profile">
+            <img src="static/review-profile.png" alt="reviewer profile" />
+            <h6>Esther Howard</h6>
+            <p>Manager ABC Group</p>
+          </div>
+        </div>
+        <div>
+          <svg
+            fill="#000000"
+            height="64px"
+            width="64px"
+            version="1.1"
+            id="Icons"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 0 32 32"
+            xml:space="preserve"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <g>
+                <path
+                  d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
+                ></path>
+                <path
+                  d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
+                ></path>
+              </g>
+            </g>
+          </svg>
+          <p>Delicious food, great service, highly recommend</p>
+          <p>Good Food Restaurant!</p>
+          <hr />
+          <div class="reviewer-profile">
+            <img src="static/review-profile.png" alt="reviewer profile" />
+            <h6>Esther Howard</h6>
+            <p>Manager ABC Group</p>
+          </div>
         </div>
       </section>
       <section class="blog">
