--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title></title>
@@ -29,6 +29,7 @@
         <li>
           <a href="">Facebook</a>
         </li>
+        <li>|</li>
         <li>
           <a href="">Instagram</a>
         </li>
@@ -118,8 +119,8 @@
       <div class="icons-container">
         <a href="">
           <svg
-            width="2rem"
-            height="2rem"
+            width="2.5rem"
+            height="2.5rem"
             viewBox="0 0 24 24"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
@@ -144,8 +145,8 @@
         <a href="">
           <svg
             fill="#ffffff"
-            height="2rem"
-            width="2rem"
+            height="2.5rem"
+            width="2.5rem"
             version="1.1"
             id="Layer_1"
             xmlns="http://www.w3.org/2000/svg"
@@ -211,8 +212,8 @@
         <a href="">
           <svg
             fill="#ffffff"
-            width="2rem"
-            height="2rem"
+            width="2.5rem"
+            height="2.5rem"
             viewBox="-3.2 -3.2 38.40 38.40"
             version="1.1"
             xmlns="http://www.w3.org/2000/svg"
@@ -244,9 +245,8 @@
           <div class="hero-p">
             <p>
               A restaurant is a place where people go to eat, frequently with
-              friends,
+              friends, family, or coworkers.
             </p>
-            <p>family, or coworkers.</p>
           </div>
           <div class="hero-buttons-container">
             <button class="primary-button">
@@ -267,7 +267,7 @@
             <div class="hero-card">
               <img src="static/hero-card1.png" alt="Plato de comida 2" />
               <div>
-                <h5>Food 2</h5>
+                <h5>King Burger</h5>
                 <button type="button">Order Now</button>
               </div>
             </div>
@@ -302,70 +302,118 @@
         <img src="static/leafs.png" alt="a green leaf" />
         <div class="special-dishes-top">
           <h2>Our Special Dishes</h2>
-          <a href="#">View All -></a>
+          <a href="#">View All<i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <section class="dishes-cards-container">
           <div class="dishes-card">
             <img src="static/special-dish1.png" alt="Special Dish 1" />
-            <div>
-              <div>estrellitas</div>
-              <div>
-                <h7>Italian Cheese</h7>
-                <span>$150</span>
-              </div>
-              <div>
-                <button>Order Now</button>
-                <button>l</button>
-                <button>c</button>
-                <button>a</button>
+            <div class="hover-container">
+              <div class="food-container">
+                <div class="rating">
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                </div>
+                <div class="food-info">
+                  <h5>King Burger</h5>
+                  <p>$150</p>
+                </div>
+                <div class="offer-buttons">
+                  <a href="">Order Now</a>
+                  <a href=""
+                    ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                  ></a>
+                  <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                  <a href=""
+                    ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
           <div class="dishes-card">
             <img src="static/special-dish3.png" alt="Special Dish 2" />
-            <div>
-              <div>estrellitas</div>
-              <div>
-                <h7>Italian Cheese</h7>
-                <span>$150</span>
-              </div>
-              <div>
-                <button>Order Now</button>
-                <button>l</button>
-                <button>c</button>
-                <button>a</button>
+            <div class="hover-container">
+              <div class="food-container">
+                <div class="rating">
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                </div>
+                <div class="food-info">
+                  <h5>King Burger</h5>
+                  <p>$150</p>
+                </div>
+                <div class="offer-buttons">
+                  <a href="">Order Now</a>
+                  <a href=""
+                    ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                  ></a>
+                  <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                  <a href=""
+                    ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
           <div class="dishes-card">
             <img src="static/special-dish3.png" alt="Special Dish 3" />
-            <div>
-              <div>estrellitas</div>
-              <div>
-                <h7>Italian Cheese</h7>
-                <span>$150</span>
-              </div>
-              <div>
-                <button>Order Now</button>
-                <button>l</button>
-                <button>c</button>
-                <button>a</button>
+            <div class="hover-container">
+              <div class="food-container">
+                <div class="rating">
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                </div>
+                <div class="food-info">
+                  <h5>King Burger</h5>
+                  <p>$150</p>
+                </div>
+                <div class="offer-buttons">
+                  <a href="">Order Now</a>
+                  <a href=""
+                    ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                  ></a>
+                  <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                  <a href=""
+                    ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
           <div class="dishes-card">
             <img src="static/special-dish4.png" alt="Special Dish 4" />
-            <div>
-              <div>estrellitas</div>
-              <div>
-                <h7>Italian Cheese</h7>
-                <span>$150</span>
-              </div>
-              <div>
-                <button>Order Now</button>
-                <button>l</button>
-                <button>c</button>
-                <button>a</button>
+            <div class="hover-container">
+              <div class="food-container">
+                <div class="rating">
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                  <i class="fa-solid fa-star fa-lg"></i>
+                </div>
+                <div class="food-info">
+                  <h5>King Burger</h5>
+                  <p>$150</p>
+                </div>
+                <div class="offer-buttons">
+                  <a href="">Order Now</a>
+                  <a href=""
+                    ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                  ></a>
+                  <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                  <a href=""
+                    ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
@@ -736,8 +784,7 @@
           <p>
             Get acquainted with our talented culinary maestros in the Meet Our
             Chefs section. Learn about their expertise, passion and creative
-            flair that elevate our culinary delights. that elevate our culinary
-            delights.
+            flair that elevate our culinary delights.
           </p>
         </div>
         <section class="chefs-container">
@@ -753,119 +800,126 @@
         </section>
       </section>
       <section class="reviews">
-        <div>
-          <svg
-            fill="#000000"
-            height="64px"
-            width="64px"
-            version="1.1"
-            id="Icons"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 0 32 32"
-            xml:space="preserve"
-          >
-            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-            <g
-              id="SVGRepo_tracerCarrier"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            ></g>
-            <g id="SVGRepo_iconCarrier">
-              <g>
-                <path
-                  d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
-                ></path>
-                <path
-                  d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
-                ></path>
+        <div class="carousel-review">
+          <div data-card-selected="0">
+            <svg
+              fill="#000000"
+              height="64px"
+              width="64px"
+              version="1.1"
+              id="Icons"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 32 32"
+              xml:space="preserve"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <g>
+                  <path
+                    d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
+                  ></path>
+                  <path
+                    d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
+                  ></path>
+                </g>
               </g>
-            </g>
-          </svg>
-          <p>Delicious food, great service, highly recommend</p>
-          <p>Good Food Restaurant!</p>
-          <hr />
-          <div class="reviewer-profile">
-            <img src="static/review-profile.png" alt="reviewer profile" />
-            <h6>Esther Howard</h6>
-            <p>Manager ABC Group</p>
+            </svg>
+            <p>LEFT</p>
+            <p>LEFT</p>
+            <hr />
+            <div class="reviewer-profile">
+              <img src="static/review-profile.png" alt="reviewer profile" />
+              <h6>Esther Howard</h6>
+              <p>Manager ABC Group</p>
+            </div>
+          </div>
+          <div data-card-selected="1">
+            <svg
+              fill="#000000"
+              height="64px"
+              width="64px"
+              version="1.1"
+              id="Icons"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 32 32"
+              xml:space="preserve"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <g>
+                  <path
+                    d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
+                  ></path>
+                  <path
+                    d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
+                  ></path>
+                </g>
+              </g>
+            </svg>
+            <p>Delicious food, great service, highly recommend</p>
+            <p>Good Food Restaurant!</p>
+            <hr />
+            <div class="reviewer-profile">
+              <img src="static/review-profile.png" alt="reviewer profile" />
+              <h6>Esther Howard</h6>
+              <p>Manager ABC Group</p>
+            </div>
+          </div>
+          <div data-card-selected="2">
+            <svg
+              fill="#000000"
+              height="64px"
+              width="64px"
+              version="1.1"
+              id="Icons"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 32 32"
+              xml:space="preserve"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <g>
+                  <path
+                    d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
+                  ></path>
+                  <path
+                    d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
+                  ></path>
+                </g>
+              </g>
+            </svg>
+            <p>RIGHT</p>
+            <p>RIGHT</p>
+            <hr />
+            <div class="reviewer-profile">
+              <img src="static/review-profile.png" alt="reviewer profile" />
+              <h6>Esther Howard</h6>
+              <p>Manager ABC Group</p>
+            </div>
           </div>
         </div>
-        <div>
-          <svg
-            fill="#000000"
-            height="64px"
-            width="64px"
-            version="1.1"
-            id="Icons"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 0 32 32"
-            xml:space="preserve"
-          >
-            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-            <g
-              id="SVGRepo_tracerCarrier"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            ></g>
-            <g id="SVGRepo_iconCarrier">
-              <g>
-                <path
-                  d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
-                ></path>
-                <path
-                  d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <p>Delicious food, great service, highly recommend</p>
-          <p>Good Food Restaurant!</p>
-          <hr />
-          <div class="reviewer-profile">
-            <img src="static/review-profile.png" alt="reviewer profile" />
-            <h6>Esther Howard</h6>
-            <p>Manager ABC Group</p>
-          </div>
-        </div>
-        <div>
-          <svg
-            fill="#000000"
-            height="64px"
-            width="64px"
-            version="1.1"
-            id="Icons"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 0 32 32"
-            xml:space="preserve"
-          >
-            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-            <g
-              id="SVGRepo_tracerCarrier"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            ></g>
-            <g id="SVGRepo_iconCarrier">
-              <g>
-                <path
-                  d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
-                ></path>
-                <path
-                  d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <p>Delicious food, great service, highly recommend</p>
-          <p>Good Food Restaurant!</p>
-          <hr />
-          <div class="reviewer-profile">
-            <img src="static/review-profile.png" alt="reviewer profile" />
-            <h6>Esther Howard</h6>
-            <p>Manager ABC Group</p>
-          </div>
+        <div class="points">
+          <button class="point" id="point1"></button>
+          <button class="point" id="point2"></button>
+          <button class="point" id="point3"></button>
         </div>
       </section>
       <section class="blog">
