--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
       </section>
     </main>
     <footer class="footer">
-      <img src="static/footer-logo.png" alt="" />
+      <img src="static/footer-logo.png" alt="RestFood Logo" />
       <ul>
         <li>
           <a href="">Home</a>
