--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>RestFood</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="static/icon.png" />
     <link href="styles/index.css" rel="stylesheet" />
     <link href="styles/header.css" rel="stylesheet" />
     <link href="styles/hero.css" rel="stylesheet" />
@@ -101,19 +102,19 @@
       </div>
       <ul>
         <li>
-          <a href="">Home</a>
+          <a href="#">Home</a>
         </li>
         <li>
-          <a href="">Menu</a>
+          <a href="#menu">Menu</a>
         </li>
         <li>
-          <a href="">Order</a>
+          <a href="order">Order</a>
         </li>
         <li>
-          <a href="">Blog</a>
+          <a href="blog">Blog</a>
         </li>
         <li>
-          <a href="">Contact</a>
+          <a href="contact">Contact</a>
         </li>
       </ul>
       <div class="icons-container">
@@ -695,7 +696,7 @@
           <img src="static/food-gallery6.png" alt="food 6" />
         </section>
       </section>
-      <section class="booking-opening">
+      <section class="booking-opening" id="order">
         <form action="" class="boo-op-container">
           <div class="title-container">
             <img src="static/leafs.png" alt="leaf" />
@@ -922,7 +923,7 @@
           <button class="point" id="point3"></button>
         </div>
       </section>
-      <section class="blog">
+      <section class="blog" id="blog">
         <img src="static/leafs.png" alt="leaf" />
         <h6 class="sofia-regular">Our Blog</h6>
         <h1>Know More About The Article</h1>
@@ -980,7 +981,7 @@
           </button>
         </div>
       </section>
-      <section class="our-location">
+      <section class="our-location" id="contact">
         <section>
           <img src="static/leafs.png" alt="a grren leaf" />
           <h6 class="sofia-regular">Our Location</h6>
@@ -1002,7 +1003,7 @@
               </li>
               <li>
                 <a href="https://www.facebook.com" target="_blank">
-                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-facebook-f"></i>
                 </a>
               </li>
               <li>
@@ -1032,19 +1033,19 @@
       <img src="static/footer-logo.png" alt="RestFood Logo" />
       <ul>
         <li>
-          <a href="">Home</a>
+          <a href="#">Home</a>
         </li>
         <li>
-          <a href="">Menu</a>
+          <a href="#menu">Menu</a>
         </li>
         <li>
-          <a href="">Order</a>
+          <a href="order">Order</a>
         </li>
         <li>
-          <a href="">Blog</a>
+          <a href="blog">Blog</a>
         </li>
         <li>
-          <a href="">Contact</a>
+          <a href="contact">Contact</a>
         </li>
       </ul>
       <p>Copyright 2023 by RestFood All rights reserved</p>
